--- a/HtmlScrawler/HtmlScrawler.csproj
+++ b/HtmlScrawler/HtmlScrawler.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataExtractor.cs" />
     <Compile Include="DataReader.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -58,6 +59,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="HtmlData.cs" />
+    <Compile Include="HtmlTags.cs" />
     <Compile Include="IDataWriter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
